--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -416,6 +416,86 @@
         "keywords": "YAML से JSON, कॉन्फ़िग कन्वर्टर, YAML कनवर्टर"
       }
     },
+    "yaml-to-toml": {
+      "name": "YAML से TOML",
+      "description": "YAML कॉन्फ़िगरेशन को TOML फॉर्मेट में परिवर्तित करें",
+      "placeholder": "कृपया YAML डेटा दर्ज करें...",
+      "invalid_yaml": "अमान्य YAML प्रारूप",
+      "input_title": "YAML इनपुट",
+      "input_desc": "परिवर्तित करने के लिए YAML कॉन्फ़िगरेशन दर्ज करें",
+      "output_title": "TOML आउटपुट",
+      "output_desc": "परिवर्तित TOML कॉन्फ़िगरेशन",
+      "output_placeholder": "परिवर्तित TOML यहां प्रदर्शित होगा...",
+      "introduction": "YAML से TOML कनवर्टर एक पेशेवर कॉन्फ़िग फाइल फॉर्मेट कन्वर्टर है जो सामान्य YAML कॉन्फ़िगरेशन को TOML फॉर्मेट में तेजी से बदलता है। TOML फॉर्मेट अधिक संक्षिप्त और सहज है, विशेष रूप से Rust प्रोजेक्ट्स, Python कॉन्फ़िगरेशन आदि के लिए उपयुक्त है। जटिल नेस्टेड स्ट्रक्चर्स का समर्थन करता है, स्वचालित रूप से डेटा टाइप्स को संभालता है और मानक TOML फॉर्मेट आउटपुट उत्पन्न करता है।",
+      "features": [
+        "🔄 YAML को TOML कॉन्फ़िगरेशन फॉर्मेट में एक-क्लिक से कन्वर्ट करें",
+        "📝 स्वचालित रूप से पठनीय TOML फॉर्मेट उत्पन्न करता है",
+        "🎯 जटिल नेस्टेड ऑब्जेक्ट्स और एरेज़ का समर्थन",
+        "📋 डेटा टाइप्स और स्ट्रक्चरल इंटीग्रिटी बनाए रखता है",
+        "💾 कनवर्टेड TOML फाइलों का त्वरित डाउनलोड",
+        "⚡ तत्काल पूर्वावलोकन के साथ रियल-टाइम कन्वर्शन",
+        "🎨 लाइट/डार्क थीम्स का समर्थन",
+        "🔒 स्थानीय प्रसंस्करण डेटा सुरक्षा सुनिश्चित करता है"
+      ],
+      "faq": [
+        {
+          "question": "YAML से TOML किन परिदृश्यों के लिए उपयुक्त है?",
+          "answer": "मुख्य रूप से Rust प्रोजेक्ट कॉन्फ़िग (Cargo.toml), Python प्रोजेक्ट कॉन्फ़िग (pyproject.toml), Hugo स्टैटिक वेबसाइट्स आदि के लिए उपयुक्त है। TOML फॉर्मेट YAML से अधिक संक्षिप्त है, विशेष रूप से मैन्युअल एडिटिंग और कॉन्फ़िगरेशन फाइलों को बनाए रखने के लिए उपयुक्त है।"
+        },
+        {
+          "question": "क्या कन्वर्शन के दौरान डेटा टाइप्स खो जाएंगे?",
+          "answer": "नहीं। हमारा कन्वर्टर डेटा टाइप इंटीग्रिटी को सख्ती से बनाए रखता है, जिसमें स्ट्रिंग्स, नंबर्स, बूलीयन्स, डेटटाइम्स, एरेज़, टेबल्स - सभी TOML-समर्थित डेटा टाइप्स सटीक रूप से मैप किए जाते हैं।"
+        },
+        {
+          "question": "क्या जेनरेटेड TOML फाइल मानक फॉर्मेट के अनुरूप है?",
+          "answer": "हाँ, जेनरेटेड TOML फाइल पूरी तरह से TOML v1.0.0 मानक विनिर्देश के अनुरूप है और किसी भी मानक TOML पार्सर द्वारा सही ढंग से पढ़ी जा सकती है।"
+        }
+      ],
+      "meta": {
+        "title": "YAML से TOML कनवर्टर - कॉन्फ़िग फाइल फॉर्मेट कन्वर्शन",
+        "description": "कॉन्फ़िग फाइलों के लिए ऑनलाइन YAML से TOML कनवर्टर। Rust, Python और अन्य प्रोजेक्ट कॉन्फ़िगरेशन के लिए उपयुक्त। वन-क्लिक डाउनलोड TOML फाइलें।",
+        "keywords": "YAML से TOML, TOML कन्वर्टर, कॉन्फ़िग फाइल कन्वर्टर"
+      }
+    },
+    "toml-to-yaml": {
+      "name": "TOML से YAML",
+      "description": "TOML कॉन्फ़िगरेशन को YAML फॉर्मेट में परिवर्तित करें",
+      "placeholder": "कृपया TOML डेटा दर्ज करें...",
+      "invalid_toml": "अमान्य TOML प्रारूप",
+      "input_title": "TOML इनपुट",
+      "input_desc": "परिवर्तित करने के लिए TOML कॉन्फ़िगरेशन दर्ज करें",
+      "output_title": "YAML आउटपुट",
+      "output_desc": "परिवर्तित YAML कॉन्फ़िगरेशन",
+      "output_placeholder": "परिवर्तित YAML यहां प्रदर्शित होगा...",
+      "introduction": "TOML से YAML कनवर्टर एक पेशेवर कॉन्फ़िग फाइल फॉर्मेट कन्वर्टर है जो TOML कॉन्फ़िगरेशन को YAML फॉर्मेट में तेजी से बदलता है। Cargo.toml, pyproject.toml और अन्य कॉन्फ़िग फाइलों को पढ़ने का समर्थन करता है, Kubernetes, Docker Compose और अन्य परिदृश्यों में उपयोग के लिए मानक YAML फॉर्मेट में परिवर्तित करता है। डेटा स्ट्रक्चर इंटीग्रिटी बनाए रखता है और स्वचालित रूप से TOML-विशिष्ट डेटा टाइप्स को संभालता है।",
+      "features": [
+        "🔄 TOML कॉन्फ़िग को मानक YAML फॉर्मेट में एक-क्लिक से कन्वर्ट करें",
+        "🎯 मल्टी-लेवल नेस्टेड टेबल्स और एरे स्ट्रक्चर्स का समर्थन",
+        "📅 स्वचालित रूप से TOML डेटटाइम टाइप्स को संभालता है",
+        "💾 परिणाम डाउनलोड करने का समर्थन, सहेजने और साझा करने में सुविधाजनक",
+        "⚡ ब्राउज़र में रियल-टाइम कन्वर्शन, कोई फाइल अपलोड की आवश्यकता नहीं",
+        "🔒 कोई डेटा अपलोड नहीं, कॉन्फ़िग फाइल सुरक्षा की रक्षा करता है"
+      ],
+      "faq": [
+        {
+          "question": "TOML से YAML आमतौर पर किन परिदृश्यों में उपयोग किया जाता है?",
+          "answer": "सामान्य परिदृश्यों में शामिल हैं: Rust प्रोजेक्ट Cargo.toml, Python प्रोजेक्ट pyproject.toml कॉन्फ़िग को Kubernetes, Docker Compose और अन्य टूल्स के लिए YAML में कन्वर्ट करना; विभिन्न कॉन्फ़िग मैनेजमेंट सिस्टम्स के बीच फॉर्मेट कन्वर्शन; TOML कॉन्फ़िग को अधिक सार्वभौमिक YAML फॉर्मेट में कन्वर्ट करना आदि।"
+        },
+        {
+          "question": "क्या कनवर्टेड YAML मूल कॉन्फ़िगरेशन का अर्थ बदल देगा?",
+          "answer": "नहीं। टूल TOML से हायरार्किकल रिलेशनशिप्स और डेटा टाइप्स को सुरक्षित रखता है, केवल रिप्रेजेंटेशन फॉर्मेट बदलता है। ध्यान दें कि TOML डेटटाइम टाइप्स को YAML टाइमस्टैम्प फॉर्मेट में कन्वर्ट किया जाता है ताकि सिमेंटिक स्थिरता बनाए रखी जा सके।"
+        },
+        {
+          "question": "क्या टूल अपेक्षाकृत बड़े TOML फाइलों का समर्थन करता है?",
+          "answer": "हाँ, आमतौर पर सैकड़ों KB से कुछ MB तक की TOML फाइलों को सामान्य रूप से परिवर्तित किया जा सकता है। ब्राउज़र प्रदर्शन सीमाओं के कारण, अत्यधिक बड़ी फाइलों में थोड़ी देरी हो सकती है, इसलिए उपयुक्त होने पर रूपांतरण से पहले उन्हें विभाजित करने की सिफारिश की जाती है।"
+        }
+      ],
+      "meta": {
+        "title": "TOML से YAML कनवर्टर - कॉन्फ़िग फाइल फॉर्मेट कन्वर्शन",
+        "description": "ऑनलाइन TOML से YAML कनवर्टर। Cargo.toml, pyproject.toml और अन्य कॉन्फ़िग फाइल फॉर्मेट रूपांतरण का समर्थन करता है। वन-क्लिक कॉपी या डाउनलोड परिणाम।",
+        "keywords": "TOML से YAML, कॉन्फ़िग कन्वर्टर, TOML कनवर्टर"
+      }
+    },
     "json-to-xml": {
       "name": "JSON से XML",
       "description": "JSON डेटा को XML प्रारूप में परिवर्तित करें",
